Enkele kleine bugs opgelost. Tevens de versie veranderd van 0.3.x naar 0.4.x.
git-svn-id: http://intra.debooy.eu/svn/CaissaTools/trunk@164 b6724bcf-16b7-40a7-9fa5-013ba81ffa6e